--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,3 @@
-/* colors: FFFFFF_v
-2F303A_v, 2196F3_v, 000000_v
-F5F4FA_v, 212121_v, EEEEEE
-757575_v, ECECEC, 188BE7 */
-
 :root {
   --primary-text-color: #757575;
   --dark-title-text-color: #212121;
@@ -21,17 +16,6 @@ F5F4FA_v, 212121_v, EEEEEE
   --transition-time: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* font-family: 'Raleway', sans-serif;
-font-family: 'Roboto', sans-serif; */
-
-body {
-  background-color: var(--main-bgc);
-  color: var(--primary-text-color);
-
-  font-family: 'Roboto', sans-serif;
-  font-size: 14px;
-  letter-spacing: 0.03em;
-}
 /* Rest */
 b,
 p,
@@ -50,20 +34,6 @@ ol {
   padding-left: 0;
 }
 
-/* hidden */
-.visually-hidden {
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
-  border: 0;
-  padding: 0;
-  clip: rect(0 0 0 0);
-  clip-path: inset(50%);
-  margin: -1px;
-}
-
 /* take off markers, applies to <ul> */
 .list {
   list-style: none;
@@ -74,6 +44,36 @@ ol {
   text-decoration: none;
 }
 
+/* to avoid gap */
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+body {
+  background-color: var(--main-bgc);
+  color: var(--primary-text-color);
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  letter-spacing: 0.03em;
+}
+
+/* hidden */
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  -webkit-clip-path: inset(50%);
+          clip-path: inset(50%);
+  margin: -1px;
+}
+
 /* container: 1170+padding-left+ padding-right */
 .container {
   width: 1200px;
@@ -82,14 +82,7 @@ ol {
   margin: 0 auto;
 }
 
-/* to avoid gap */
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
 /* Header */
-
 .header {
   border-color: #ececec;
   border-bottom-width: 1px;
@@ -104,8 +97,7 @@ img {
 /* Logo */
 .logo {
   color: var(--accent-color);
-
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
@@ -137,35 +129,30 @@ img {
 .site-nav__item:not(:last-child) {
   margin-right: 50px;
 }
+
 .site-nav__link {
   position: relative;
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
-
   color: var(--dark-title-text-color);
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
-
   transition: color var(--transition-time);
 }
-
-.site-nav__link:hover,
-.site-nav__link:focus {
+.site-nav__link:hover, .site-nav__link:focus {
   color: var(--accent-color);
 }
 
 .site-nav__link--current {
   color: var(--accent-color);
 }
-
 .site-nav__link--current::after {
   position: absolute;
   left: 0;
   bottom: -1px;
-
-  content: '';
+  content: "";
   display: block;
   width: 100%;
   height: 4px;
@@ -174,7 +161,6 @@ img {
 }
 
 /* Contacts */
-
 .contacts {
   display: flex;
   gap: 30px;
@@ -190,36 +176,28 @@ img {
   padding-bottom: 32px;
   align-items: center;
   gap: 10px;
-
   color: inherit;
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
-
   transition: color var(--transition-time);
+}
+.contacts__link:hover, .contacts__link:focus {
+  color: var(--accent-color);
 }
 
 .contacts__item {
   fill: currentColor;
 }
 
-.contacts__link:hover,
-.contacts__link:focus {
-  color: var(--accent-color);
-}
-
 /* Hero */
-
 .hero {
   max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
   padding-top: 200px;
   padding-bottom: 200px;
-
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url('../images/hero-img.jpg');
-
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero-img.jpg");
   background-color: var(--hero-bgc);
   background-repeat: no-repeat;
   background-position: center;
@@ -232,7 +210,6 @@ img {
   margin-bottom: 30px;
   margin-left: auto;
   margin-right: auto;
-
   color: var(--light-title-text-color);
   font-weight: 900;
   font-size: 44px;
@@ -247,7 +224,6 @@ img {
   border-color: transparent;
   border-width: 0px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-
   background-color: var(--accent-color);
   color: var(--light-title-text-color);
   font-family: inherit;
@@ -255,18 +231,14 @@ img {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.06em;
-
   cursor: pointer;
   transition: background-color var(--transition-time);
 }
-
-.hero__button:hover,
-.hero__button:focus {
+.hero__button:hover, .hero__button:focus {
   background-color: var(--button-active-bgc);
 }
 
 /* Sections */
-
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
@@ -275,7 +247,6 @@ img {
 .section__title {
   margin-bottom: 50px;
   color: var(--dark-title-text-color);
-
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
@@ -285,7 +256,8 @@ img {
 /* Features */
 .feauters {
   display: flex;
-  column-gap: 30px;
+  -moz-column-gap: 30px;
+       column-gap: 30px;
 }
 
 .feauters__item {
@@ -294,7 +266,6 @@ img {
 
 .feauters__title {
   margin-bottom: 10px;
-
   color: var(--dark-title-text-color);
   font-size: inherit;
   font-weight: 700;
@@ -313,24 +284,22 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-
   background-color: var(--dark-section-bgc);
 }
 
 /* Occupation */
-
 .occupation {
   padding-top: 0;
 }
 
 .occupation-list {
   display: flex;
-  column-gap: 30px;
+  -moz-column-gap: 30px;
+       column-gap: 30px;
 }
 
 .occupation-list__item {
   position: relative;
-
   flex-basis: calc((100% - 60px) / 3);
 }
 
@@ -338,12 +307,10 @@ img {
   position: absolute;
   bottom: 0;
   left: 0;
-
   height: 70px;
   width: 100%;
   padding-top: 27px;
   padding-bottom: 27px;
-
   font-weight: 700;
   line-height: 1.14;
   text-align: center;
@@ -364,11 +331,9 @@ img {
 .team-list-item {
   flex-basis: calc((100% - 90px) / 4);
   background-color: var(--light-title-text-color);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
-
 .team-list-item:not(:last-child) {
   margin-right: 30px;
 }
@@ -381,7 +346,6 @@ img {
 
 .team-list-member {
   margin-bottom: 10px;
-
   color: var(--dark-title-text-color);
   font-weight: 500;
   font-size: 16px;
@@ -405,16 +369,13 @@ img {
   height: 44px;
   border-radius: 50%;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   fill: var(--icon-color);
   background-color: var(--light-title-text-color);
-
   transition: background-color var(--transition-time), fill var(--transition-time);
 }
-
-.team-soc-link:hover,
-.team-soc-link:focus {
+.team-soc-link:hover, .team-soc-link:focus {
   background-color: var(--accent-color);
   fill: var(--light-title-text-color);
 }
@@ -427,7 +388,6 @@ img {
 .team-soc-link:focus .team-soc-icon {
   fill: var(--light-title-text-color);
 } */
-
 /* Cleints */
 .clients-list {
   display: flex;
@@ -435,7 +395,7 @@ img {
 }
 
 .clients-item {
-  flex-basis: calc((100% - 5 * 30px) / 3);
+  flex-basis: calc((100% - 150px) / 3);
 }
 
 .clients-link {
@@ -448,13 +408,10 @@ img {
   fill: var(--icon-color);
   transition: border-color var(--transition-time);
 }
-
 .clients-link .clients-icon {
   transition: fill var(--transition-time);
 }
-
-.clients-link:hover,
-.clients-link:focus {
+.clients-link:hover, .clients-link:focus {
   border-color: var(--accent-color);
 }
 
@@ -487,12 +444,9 @@ img {
   color: var(--light-title-text-color);
   font-style: normal;
   line-height: 1.71;
-
   transition: color var(--transition-time);
 }
-
-.footer-list-adress:hover,
-.footer-list-adress:focus {
+.footer-list-adress:hover, .footer-list-adress:focus {
   color: var(--accent-color);
 }
 
@@ -500,12 +454,9 @@ img {
   color: var(--adress-contacts);
   font-style: normal;
   line-height: 1.71;
-
   transition: color var(--transition-time);
 }
-
-.footer-list-contacts:hover,
-.footer-list-contacts:focus {
+.footer-list-contacts:hover, .footer-list-contacts:focus {
   color: var(--accent-color);
 }
 
@@ -517,7 +468,6 @@ img {
 .subscribe-text {
   display: block;
   margin-bottom: 20px;
-
   color: var(--light-title-text-color);
   font-weight: 700;
   line-height: 1.14;
@@ -538,12 +488,9 @@ img {
   align-items: center;
   fill: var(--light-title-text-color);
   background-color: rgba(255, 255, 255, 0.1);
-
   transition: background-color var(--transition-time);
 }
-
-.join-soc-link:hover,
-.join-soc-link:focus {
+.join-soc-link:hover, .join-soc-link:focus {
   background-color: var(--accent-color);
 }
 
@@ -562,14 +509,24 @@ img {
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-
   background-color: transparent;
   color: var(--light-title-text-color);
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
 }
-
+.sub-input::-moz-placeholder {
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+}
+.sub-input:-ms-input-placeholder {
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+}
 .sub-input::placeholder {
   color: rgba(255, 255, 255, 0.6);
   font-size: 16px;
@@ -586,7 +543,6 @@ img {
   border-color: transparent;
   border-width: 0px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-
   background-color: var(--accent-color);
   color: var(--light-title-text-color);
   font-family: inherit;
@@ -594,149 +550,19 @@ img {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.06em;
-
   cursor: pointer;
   transition: background-color var(--transition-time);
 }
-
-.sub-button:hover,
-.sub-button:focus {
+.sub-button:hover, .sub-button:focus {
   background-color: var(--button-active-bgc);
-}
-/* Portfolio */
-
-/* Filters */
-
-.filter {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
-}
-
-.filter-item:not(:last-child) {
-  margin-right: 8px;
-}
-
-.filter-link {
-  padding: 6px 22px;
-  min-width: 73px;
-  border-radius: 4px;
-  border-width: 0;
-  border-color: transparent;
-
-  background-color: var(--filter-bgc);
-  color: var(--dark-title-text-color);
-
-  font-family: inherit;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.63;
-  text-align: center;
-  letter-spacing: 0.03em;
-
-  cursor: pointer;
-  transition: color var(--transition-time), background-color var(--transition-time),
-    box-shadow var(--transition-time);
-}
-
-.filter-link:hover,
-.filter-link:focus {
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-
-  background-color: var(--accent-color);
-  color: var(--light-title-text-color);
-}
-
-/* Potfolio-list */
-.portfolio-list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 30px;
-}
-
-.portfolio-item {
-  flex-basis: calc((100% - 60px) / 3);
-}
-
-/* with nth child */
-/* .portfolio-item:not(:nth-child(3n)) {
-  margin-right: 30px;
-}
-.portfolio-item:not(:nth-last-child(-n + 3)) {
-  margin-bottom: 30px;
-} */
-
-.portfolio-link {
-  color: inherit;
-  display: block;
-
-  transition: box-shadow var(--transition-time);
-}
-
-.portfolio-link:hover,
-.portfolio-link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.portfolio-top-wrap {
-  position: relative;
-  overflow: hidden;
-}
-
-.portfolio-cover-text {
-  position: absolute;
-  top: 0;
-  left: 0;
-
-  height: 100%;
-  padding: 63px 24px;
-
-  font-size: 18px;
-  line-height: 1.56;
-  color: var(--light-title-text-color);
-  background: rgba(33, 150, 243, 0.9);
-
-  overflow: auto;
-  transform: translateY(100%);
-  transition: transform var(--transition-time);
-}
-
-.portfolio-link:hover .portfolio-cover-text {
-  transform: translateY(0);
-}
-
-.portfolio-content {
-  padding: 20px 24px;
-  border-color: #eeeeee;
-  border-width: 0px 1px 1px 1px;
-  border-style: solid;
-}
-
-.portfolio-title {
-  color: var(--dark-title-text-color);
-  margin-bottom: 4px;
-
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-}
-
-.portfolio-type {
-  font-size: 16px;
-  line-height: 1.88;
 }
 
 .backdrop {
   position: fixed;
   top: 0;
   left: 0;
-
   width: 100%;
   height: 100%;
-
   background-color: rgba(0, 0, 0, 0.2);
   transition: opacity var(--transition-time), visibility var(--transition-time);
 }
@@ -746,20 +572,15 @@ img {
   top: 50%;
   left: 50%;
   padding: 40px;
-
   width: 528px;
   height: 581px;
-
   background-color: var(--light-title-text-color);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transform: translate(-50%, -50%) scaleX(1);
   opacity: 1;
-
   transition: transform 400ms cubic-bezier(0.4, 0, 0.2, 1), opacity var(--transition-time) 300ms;
 }
-
 .backdrop.is-hidden .modal {
   transform: translate(-50%, -50%) scaleX(0);
   opacity: 0.5;
@@ -769,23 +590,17 @@ img {
   position: absolute;
   top: 8px;
   right: 8px;
-
   width: 30px;
   height: 30px;
-
   display: flex;
   align-items: center;
   justify-content: center;
-
   background-color: transparent;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
-
   cursor: pointer;
 }
-
-.modal-btn:hover,
-.modal-btn:focus {
+.modal-btn:hover, .modal-btn:focus {
   fill: var(--accent-color);
 }
 
@@ -803,7 +618,6 @@ img {
   line-height: 1.15;
   text-align: center;
   margin-bottom: 12px;
-
   color: var(--dark-title-text-color);
 }
 
@@ -815,7 +629,6 @@ img {
 .form-input {
   width: 100%;
   height: 40px;
-
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding-left: 42px;
@@ -825,17 +638,10 @@ img {
   font-size: 16px;
   line-height: 1.25;
   outline: transparent;
-
   transition: border var(--transition-time);
 }
-
-.form-input:focus,
-.form-comments:focus {
+.form-input:focus {
   border: 1px solid var(--accent-color);
-}
-
-.form-input:focus + .form-icon {
-  fill: var(--accent-color);
 }
 
 .input-wrap {
@@ -849,6 +655,9 @@ img {
   transform: translateY(-50%);
   transition: fill var(--transition-time);
 }
+.form-input:focus + .form-icon {
+  fill: var(--accent-color);
+}
 
 .form-field-comments {
   margin-bottom: 20px;
@@ -860,34 +669,50 @@ img {
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
-
   padding: 12px 16px;
   outline: transparent;
   transition: border var(--transition-time);
-
   resize: none;
 }
-
+.form-comments::-moz-placeholder {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+.form-comments:-ms-input-placeholder {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
 .form-comments::placeholder {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
+.form-comments:focus {
+  border: 1px solid var(--accent-color);
+}
 
 .form-label {
   display: block;
   margin-bottom: 4px;
-
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
 }
 
 .privacy {
+  width: -webkit-max-content;
+  width: -moz-max-content;
   width: max-content;
   margin-left: auto;
   margin-right: auto;
+}
+.privacy-link {
+  color: var(--accent-color);
 }
 
 .privacy-text {
@@ -897,7 +722,6 @@ img {
   display: flex;
   align-items: center;
 }
-
 .privacy-text .privacy-box {
   width: 16px;
   height: 15px;
@@ -910,7 +734,6 @@ img {
   fill: transparent;
   transition: background-color var(--transition-time), fill var(--transition-time);
 }
-
 .input-check:checked + .privacy-text .privacy-box {
   background-color: var(--accent-color);
   border-color: transparent;
@@ -918,10 +741,6 @@ img {
 
 .input-check:checked + .privacy-text svg {
   fill: var(--light-title-text-color);
-}
-
-.privacy-link {
-  color: var(--accent-color);
 }
 
 .form-btn {
@@ -934,7 +753,6 @@ img {
   margin-left: auto;
   margin-right: auto;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-
   background-color: var(--accent-color);
   color: var(--light-title-text-color);
   font-family: inherit;
@@ -942,12 +760,9 @@ img {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.06em;
-
   cursor: pointer;
   transition: background-color var(--transition-time);
 }
-
-.form-btn:hover,
-.form-btn:focus {
+.form-btn:hover, .form-btn:focus {
   background-color: var(--button-active-bgc);
-}
+}/*# sourceMappingURL=main.css.map */
