--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,15 +5,15 @@
 @import './utils/visually-hidden';
 @import './components/container';
 @import './layouts/header';
-@import './components/logo';
+@import './layouts/logo';
 @import './layouts/navigation';
 @import './layouts/header-contacts';
-@import './layouts/hero';
+@import './components/hero';
 @import './components/section';
 @import './components/_section-title';
-@import './layouts/feauters';
-@import './layouts/occupation';
-@import './layouts/team';
-@import './layouts/clients';
+@import './components/feauters';
+@import './components/occupation';
+@import './components/team';
+@import './components/clients';
 @import './layouts/footer';
 @import './components/modal';
