--- a/sass/potfolio.scss
+++ b/sass/potfolio.scss
@@ -5,12 +5,12 @@
 @import './utils/visually-hidden';
 @import './components/container';
 @import './layouts/header';
-@import './components/logo';
+@import './layouts/logo';
 @import './layouts/navigation';
 @import './layouts/header-contacts';
 @import './components/section';
 @import './components/_section-title';
-@import './layouts/portfolio-filter';
-@import './layouts/portfolio-list';
+@import './components/portfolio-filter';
+@import './components/portfolio-list';
 
 @import './layouts/footer';
